--- a/notes.org
+++ b/notes.org
@@ -1117,3 +1117,152 @@ What I think might be the backtrace for the malloc call preceding the failure. N
 **** "Do not allow a new exception to propagate out of the execution of a cleanup. This can corrupt the internal state of the unwinder."
 *** Investigate: Is there some way we can know (in trans) when we are in a landing pad? If so, we could avoid emitting invoke instructions.
 **** Each basic block has a parent, walk up until we hit a landing pad or root.
+* 2012-07-24: Week 6 Tuesday
+** Adgenda
+*** Actually finally test the GC on the test suite, or continue to fix bugs if it doesn't work as expected
+*** Assign bugs to myself once I get contributer access
+**** https://github.com/mozilla/rust/issues/2997
+**** https://github.com/mozilla/rust/issues/2861
+**** https://github.com/mozilla/rust/issues/2232
+*** Emit root metadata (or addrspace) so we know how to drop resources
+*** Keep roots live long enough to outlive fail
+*** Recurse on roots to get all live pointers
+**** See https://github.com/mozilla/rust/issues/1498
+*** Walk list of allocations to see what to free
+*** Everything else
+**** Change rt::rt_fail's return type from 'nil' to '!' ? (See https://github.com/mozilla/rust/issues/2232)
+**** First pass on SelectionDAG for the new GC infrastructure
+**** Fix second box parameter bug
+**** Figure out register roots
+**** Binary search on safe points
+** Progress
+*** Fixed emitting invoke instructions inside landing pads
+**** Issued pull request, graydon merged into incoming
+*** Testing GC
+**** Added gc() call to rt::rt_malloc and rt::rt_exchange_malloc
+**** Turned off drop_uniques() call in rt::rt_fail
+**** Compiled without optimization, with --gc enabled, with landing-pads-on
+
+git fetch &&
+git reset --hard origin/unique-ptrs &&
+#./configure --prefix=$(pwd)/install --disable-optimize &&
+(RUSTFLAGS='-O' make -j8) &&
+make check -k 2>&1 | tee tests.log
+
+**** Results: Passes all tests except one in run-passes and a segfault in stdtest!
+***** The failing test is not obviously my fault. Something about UTF8, and I'm pretty sure I've seen this test fail before.
+****** src/test/run-pass/utf8_idents.rs
+****** Looks like a floating point imprecision error (using exact equality instead of subtract/abs/epsilon)
+****** Trying a tweak to see if that fixes the test
+****** Fixed, made a pull request
+***** But stdtest is still segfaulting
+****** In stdtest, failing test is uv_global_loop::test::test_gl_uv_global_loop_high_level_global_timer
+*** Graydon is going to rebase LLVM, so be prepared for breakage
+*** Patrick was right about gcregroot not including a metadata pointer
+**** Need to evaluate whether or not metadata or addrspaces is the easier route
+*** Graydon noticed upstream LLVM has added a pass called LiveRegMatrixPass
+**** It's probably unrelated, but might as well check it out anyway
+**** Looks like it's for register allocation, not liveness
+* 2012-07-25: Week 6 Wednesday
+** Adgenda
+*** Fix build breakage in LiveIRVariables pass
+*** Emit root metadata (or addrspace) so we know how to drop resources
+*** Keep roots live long enough to outlive fail
+*** Recurse on roots to get all live pointers
+**** See https://github.com/mozilla/rust/issues/1498
+*** Walk list of allocations to see what to free
+*** Everything else
+**** Change rt::rt_fail's return type from 'nil' to '!' ? (See https://github.com/mozilla/rust/issues/2232)
+**** First pass on SelectionDAG for the new GC infrastructure
+**** Fix second box parameter bug
+**** Figure out register roots
+**** Binary search on safe points
+** Progress
+*** Need to fix build breakage on "Theorem 3"
+**** This is the old version of my lpad check, which I think I might need
+***** Patch 5f55c4b
+
+     // Avoid using invoke if we are already inside a landing pad.
+     let landing_pad = alt bcx.kind {
+       block_scope(inf) { inf.landing_pad }
+       _ { none }
+     };
+     alt landing_pad {
+       option::some(ancestor) {
+         let mut cur = option::some(bcx);
+         while option::is_some(cur) && option::get(cur).llbb != ancestor {
+             cur = option::get(cur).parent
+         }
+         if option::is_some(cur) && option::get(cur).llbb == ancestor {
+             ret false;
+         }
+       }
+       _ { }
+     }
+
+***** Never mind, I can't even build core with this patch, even given the ordering fix
+**** We're producing an irreducible CFG alright, but it's not with invoke instructions this time
+
+digraph {
+  0 -> 1
+  10 -> 7
+  1 -> 2
+  1 -> 3
+  2 -> 3[color = red];
+  2 -> 10
+  3 -> 4
+  3 -> 6
+  3 -> 8
+  3 -> 9
+  4 -> 5
+  5 -> 1[color = red];
+  6 -> 7
+  8 -> 2
+  9 -> 5
+}
+
+**** Pushed a temporary fix which xfails the offending tests
+**** Need to revert xfails and figure out how to make liveness happy again
+**** Looks like the bad CFG is coming out of the LLVM optimizer
+***** Unoptimized build works fine, so we're producing reducible code initially
+***** But somehow the optimizer is producing irreducible code
+**** Patrick suggests going through the LLVM passes one by one (for this file) and print the CFG after each one, to figure out which one is producing the bad result
+*** Also, LiveIRVariables is slow
+**** Patrick says LiveIRVariables::computeReachableBackEdges is the slowest
+**** In the worst case it is N^2 in the number of basic blocks, and in an unoptimized build we have a lot of basic blocks
+**** We're using a DenseSet for BackEdges, which is apparently eating up time
+**** Pushed some fixes to my tree
+* 2012-07-26: Week 6 Thursday
+** Adgenda
+*** Write email to Chris Lattner about the liveness algorithm
+*** Better fix for LiveIRVariables pass
+**** Figure out what LLVM optimization is producing the bad code
+*** Emit root metadata (or addrspace) so we know how to drop resources
+*** Everything else
+**** Keep roots live long enough to outlive fail
+**** Recurse on roots to get all live pointers
+***** See https://github.com/mozilla/rust/issues/1498
+**** Walk list of allocations to see what to free
+**** Change rt::rt_fail's return type from 'nil' to '!' ? (See https://github.com/mozilla/rust/issues/2232)
+**** First pass on SelectionDAG for the new GC infrastructure
+**** Fix second box parameter bug
+**** Figure out register roots
+**** Binary search on safe points
+** Progress
+*** Draft email to Chris Lattner
+
+Hi Chris,
+
+I am working with Patrick (CC'd) on Rust's GC. I believe you referred Patrick to a fast liveness paper[1]. While implementing the paper for LLVM, we noticed issues with assumptions it made.
+
+The paper assumes reducible control flow. To my knowledge, this property does not hold in general for LLVM. And specifically, LLVM optimizations may not preserve this property even for code which originally satisfied it.
+
+In Rust, we ran into some cases where we produced reducible code initially, but where the LLVM optimizer caused control flow to become irreducible. I find this troubling because failures are almost entirely opaque to the compiler writer; predicting what (reducible) code from the compiler is being made irreducible in the optimizer is not easy. And simple tricks like running LoopSimplify before our liveness pass appear to be ineffective.
+
+Is this the best algorithm for liveness in LLVM? Can we ensure the invariants required by the algorithm are maintained across optimizations? Or do we need to go a different route?
+
+Thanks.
+
+[1]: "Fast Liveness Checking for SSA-Form Programs", http://hal.archives-ouvertes.fr/docs/00/19/22/19/PDF/fast_liveness.pdf
+
+**** Email sent
